
 Enhancements/Change Log for Tn5250j
===============================================================================

--- v0.7.0 ----------------------------------------------------- ??/??/2011 ---

FIX: reworked tab close & session close, now unified handling on all events
CHG: New default option use Enter instead of Ctrl key (See feature request ID: 3161670 and poll on mailing list in 01/2011)
CHG: New default option use 'mouse wheel: send page up/down'
CHG: New default option 'confirm signon screen before close'
CHG: simplified internal mouse wheel scroll implementation, discarded older JRE support (older than 1.4.2)
DEL: dropped internal source code for older JRE support (older than 1.4.2) 

--- v0.6.3 ----------------------------------------------------- 25/05/2011 ---

ADD: About dialog/tab (JSE6 only)
ADD: center connect dialog on top of main frame/window
ADD: tool tips for session tab titles
FIX: wrong display of title text, when tab title changes
FIX: unchecked confirmTabClose in properties (JSE6 only)
FIX: bug id:3292459 (Reload macros file on launch)
FIX: bug id:3205299 (email addresses prefixed with "mailto:" are not considered as hotspots)
FIX: bug id:3179868 (Text and fields are not displayed)
FIX: bug id:3161636 (System Name not in window title bar anymore)
FIX: bug id:3160345 (Default value of column separator looks strange)
FIX: bug id:3158911 (command line switch -s not working any more)
FIX: bug id:3158902 (settings folder in user's home directory is not created)
FIX: bug id:3155293 (hangs when called with explicit host name)
FIX: reworked internal code for debugging (JSE6 only)
CHG: removed old images (JSE6 only)

--- v0.6.2 ----------------------------------------------------- 08/12/2010 ---

ADD: Improved tab bar with SSL enabled icon (JSE6 only)
ADD: Nimbus theme as default (JSE6 only)
ADD: Multiple icons in different sizes (JSE6 only)
ADD: Saving last connected session at user's preference store, preselecting